--- a/app/src/main/res/drawable/background_bottom_nav.xml
+++ b/app/src/main/res/drawable/background_bottom_nav.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ff00ff" />
+    <solid android:color="@color/color_background_85" />
 </shape>
