--- a/app/src/main/res/layout/fragment_embark_text_action.xml
+++ b/app/src/main/res/layout/fragment_embark_text_action.xml
@@ -17,18 +17,15 @@
         tools:itemCount="1"
         tools:listitem="@layout/embark_message_item" />
 
-    <com.google.android.material.textfield.TextInputLayout
+    <EditText
+        android:id="@+id/textActionInput"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:hint="@null"
+        android:importantForAutofill="no"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textActionInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
