Require some input before we enable submitting

--- a/app/src/main/res/layout/fragment_embark_text_action.xml
+++ b/app/src/main/res/layout/fragment_embark_text_action.xml
@@ -32,6 +32,7 @@
         android:id="@+id/textActionSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:enabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
