--- a/app/src/main/res/layout/fragment_embark_select_action.xml
+++ b/app/src/main/res/layout/fragment_embark_select_action.xml
@@ -16,6 +16,17 @@
         tools:itemCount="1"
         tools:listitem="@layout/embark_message_item" />
 
+    <TextView
+        android:id="@+id/response"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:alpha="0"
+        android:textAppearance="?textAppearanceBody1"
+        android:translationY="100dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/messages" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/actions"
         android:layout_width="0dp"
