--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".feature.profile.ui.aboutapp.AboutAppActivity">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/root"
@@ -22,6 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/base_margin_triple"
+                android:layout_marginBottom="@dimen/base_margin_double"
                 android:text="@string/PROFILE_ABOUT_APP_TITLE"
                 android:textAppearance="?textAppearanceHeadline4" />
 
