--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -22,6 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/base_margin_double"
+                android:layout_marginBottom="@dimen/base_margin_double"
                 android:text="@string/PROFILE_FEEDBACK_TITLE"
                 android:textAppearance="?textAppearanceHeadline4" />
 
