Mess around completely with colors

--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -63,7 +63,7 @@
                 android:layout_marginStart="@dimen/base_margin_double"
                 android:layout_marginTop="@dimen/base_margin"
                 android:text="@string/bug_report_mail"
-                android:textColor="?colorSecondary" />
+                android:textColor="?android:textColorSecondary" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -80,7 +80,7 @@
                 android:layout_marginStart="@dimen/base_margin_double"
                 android:layout_marginTop="@dimen/base_margin"
                 android:text="@string/rate_us_link"
-                android:textColor="?colorSecondary" />
+                android:textColor="?android:textColorSecondary" />
 
         </LinearLayout>
 
