--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -176,7 +176,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/base_margin"
                                 android:layout_marginBottom="@dimen/base_margin_double"
-                                android:textColor="?colorSecondary"
+                                android:textColor="?android:textColorSecondary"
                                 tools:text="@string/OFFER_ADD_DISCOUNT_BUTTON" />
 
                         </LinearLayout>
