--- a/app/src/main/res/layout/key_gear_item_detail_receipt_section.xml
+++ b/app/src/main/res/layout/key_gear_item_detail_receipt_section.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/base_margin_triple"
-            android:textColor="?colorSecondary"
+            android:textColor="?android:textColorSecondary"
             tools:text="@string/KEY_GEAR_ITEM_VIEW_RECEIPT_CELL_ADD_BUTTON" />
 
     </LinearLayout>
