--- a/app/src/main/res/layout/activity_contract_detail.xml
+++ b/app/src/main/res/layout/activity_contract_detail.xml
@@ -151,7 +151,7 @@
                     android:layout_marginTop="@dimen/base_margin_triple"
                     android:text="@string/CONTRACT_DETAIL_HOME_CHANGE_INFO"
                     android:textAllCaps="false"
-                    android:textColor="?colorSecondary"
+                    android:textColor="?android:textColorSecondary"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/homeSeparator" />
@@ -215,7 +215,7 @@
                     android:background="?attr/selectableItemBackground"
                     android:text="@string/CONTRACT_DETAIL_COINSURED_CHANGE_INFO"
                     android:textAllCaps="false"
-                    android:textColor="?colorSecondary"
+                    android:textColor="?android:textColorSecondary"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/coinsuredSeparator" />
