--- a/app/src/main/res/layout/chat_single_select_button.xml
+++ b/app/src/main/res/layout/chat_single_select_button.xml
@@ -11,5 +11,5 @@
     android:paddingEnd="@dimen/base_margin_double"
     android:paddingBottom="@dimen/base_margin"
     android:textAppearance="?textAppearanceBody1"
-    android:textColor="?colorSecondary"
+    android:textColor="?android:textColorSecondary"
     tools:text="Select" />
