--- a/app/src/main/res/layout/create_key_gear_item_new_photo.xml
+++ b/app/src/main/res/layout/create_key_gear_item_new_photo.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="@dimen/base_margin"
         android:text="@string/KEY_GEAR_ADD_ITEM_ADD_PHOTO_BUTTON"
         android:textAppearance="?textAppearanceBody2"
-        android:textColor="?colorSecondary"
+        android:textColor="?android:textColorSecondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
