--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -9,11 +9,14 @@
     <item name="colorBackground" type="color">@color/hedvig_off_white</item>
     <item name="colorSurface" type="color">@color/hedvig_white</item>
     <item name="colorOnSurface" type="color">@color/colorPrimary</item>
-    <item name="colorSecondary" type="color">@color/purple</item>
+    <item name="colorSecondary" type="color">#C9ABF5</item>
     <item name="colorOnSecondary" type="color">@color/hedvig_white</item>
 
+    <item name="colorError" type="color">#DD2727</item>
+
     <item name="textColorPrimary" type="color">@color/hedvig_dark_gray</item>
-    <item name="textColorSecondary" type="color">@color/hedvig_black</item>
+    <item name="textColorPrimaryVariant" type="color">@color/hedvig_black</item>
+    <item name="textColorSecondary" type="color">#875EC5</item>
 
     <item name="colorButton" type="color">@color/colorPrimary</item>
 
