--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -12,11 +12,12 @@
         <item name="colorOnSurface">@color/colorOnSurface</item>
         <item name="colorSecondary">@color/colorSecondary</item>
         <item name="colorOnSecondary">@color/colorOnSecondary</item>
-        <item name="colorError">@color/coral_500</item>
+        <item name="colorError">@color/colorError</item>
         <item name="colorOnError">@color/hedvig_white</item>
         <item name="colorButton">@color/colorButton</item>
-        <item name="android:textColorPrimary">@color/colorPrimaryVariant</item>
-        <item name="android:textColorSecondary">@color/colorPrimary</item>
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+        <item name="textColorPrimaryVariant">@color/textColorPrimaryVariant</item>
+        <item name="android:textColorSecondary">@color/textColorSecondary</item>
         <item name="fontFamily">@font/favorit_book</item>
         <item name="android:fontFamily">@font/favorit_book</item>
 
@@ -63,6 +64,7 @@
     <attr name="materialButtonTextStyle" format="reference" />
     <attr name="textAppearanceBody3" format="reference" />
     <attr name="colorButton" format="reference" />
+    <attr name="textColorPrimaryVariant" format="reference" />
 
     <style name="AlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="android:textAllCaps">false</item>
