--- a/app/src/main/res/layout/key_gear_item_detail_name_section.xml
+++ b/app/src/main/res/layout/key_gear_item_detail_name_section.xml
@@ -53,7 +53,7 @@
             android:layout_gravity="end|center|center_vertical"
             android:background="?attr/selectableItemBackground"
             android:text="@string/KEY_GEAR_ITEM_VIEW_ITEM_NAME_EDIT_BUTTON"
-            android:textColor="?android:textColorSecondary" />
+            android:textColor="?colorSecondary" />
 
     </FrameLayout>
 </LinearLayout>
