--- a/app/src/main/res/layout/activity_charity.xml
+++ b/app/src/main/res/layout/activity_charity.xml
@@ -108,9 +108,9 @@
                     android:paddingEnd="@dimen/base_margin_half"
                     android:paddingBottom="@dimen/base_margin"
                     android:text="@string/CHARITY_INFO_BUTTON_LABEL"
-                    android:textColor="?android:textColorSecondary"
+                    android:textColor="?colorSecondary"
                     app:icon="@drawable/ic_info_purple"
-                    app:iconTint="?android:textColorSecondary" />
+                    app:iconTint="?colorSecondary" />
 
             </LinearLayout>
 
@@ -168,9 +168,9 @@
                     android:paddingEnd="@dimen/base_margin_half"
                     android:paddingBottom="@dimen/base_margin"
                     android:text="@string/CHARITY_INFO_BUTTON_LABEL"
-                    android:textColor="?android:textColorSecondary"
+                    android:textColor="?colorSecondary"
                     app:icon="@drawable/ic_info_purple"
-                    app:iconTint="?android:textColorSecondary" />
+                    app:iconTint="?colorSecondary" />
 
             </LinearLayout>
 
