--- a/app/src/main/res/layout/promotion_code_dialog.xml
+++ b/app/src/main/res/layout/promotion_code_dialog.xml
@@ -84,6 +84,6 @@
         android:layout_marginTop="@dimen/base_margin"
         android:gravity="center"
         android:text="@string/REFERRAL_ADDCOUPON_TC_LINK"
-        android:textColor="?android:textColorSecondary" />
+        android:textColor="?colorSecondary" />
 
 </LinearLayout>
