--- a/app/src/main/res/values/text_themes.xml
+++ b/app/src/main/res/values/text_themes.xml
@@ -29,29 +29,27 @@
 
     <style name="Hedvig.TextAppearance.Subtitle1" parent="TextAppearance.MaterialComponents.Subtitle1">
         <item name="android:textSize">@dimen/text_medium</item>
-        <item name="android:textColor">?textColorPrimaryVariant</item>
+        <item name="android:textColor">?android:textColorSecondary</item>
         <item name="lineHeight">@dimen/line_height_medium</item>
     </style>
 
     <style name="Hedvig.TextAppearance.Headline3" parent="TextAppearance.MaterialComponents.Headline3">
         <item name="android:letterSpacing">0</item>
-        <item name="android:textColor">?textColorPrimaryVariant</item>
     </style>
 
     <style name="Hedvig.TextAppearance.Headline4" parent="TextAppearance.MaterialComponents.Headline4">
         <item name="android:textSize">@dimen/text_xxlarge</item>
         <item name="android:letterSpacing">0</item>
-        <item name="android:textColor">?textColorPrimaryVariant</item>
     </style>
 
     <style name="Hedvig.TextAppearance.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
-        <item name="android:textColor">?textColorPrimaryVariant</item>
+        <item name="android:textColor">?android:textColorSecondary</item>
         <item name="android:letterSpacing">0</item>
     </style>
 
     <style name="Hedvig.TextAppearance.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textSize">@dimen/text_medium</item>
-        <item name="android:textColor">?textColorPrimaryVariant</item>
+        <item name="android:textColor">?android:textColorSecondary</item>
         <item name="android:letterSpacing">0</item>
     </style>
 
