--- a/app/src/main/res/layout/next_payment_card.xml
+++ b/app/src/main/res/layout/next_payment_card.xml
@@ -61,7 +61,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:background="@drawable/sphere"
-                android:backgroundTint="?colorError"
+                android:backgroundTint="@color/coral_500"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
