New notification type

--- a/app/src/debug/res/layout/activity_development.xml
+++ b/app/src/debug/res/layout/activity_development.xml
@@ -148,6 +148,14 @@
             android:layout_marginTop="@dimen/base_margin_double"
             android:text="Open language selector" />
 
+        <Button
+            android:id="@+id/sendReferralsEnabledNotification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/base_margin_double"
+            android:text="Send referrals enabled notification" />
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
