--- a/app/src/main/res/layout/create_key_gear_item_new_photo.xml
+++ b/app/src/main/res/layout/create_key_gear_item_new_photo.xml
@@ -1,40 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/addPhoto"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/create_key_gear_add_photo_height"
-    android:layout_marginBottom="@dimen/base_margin_half"
-    android:background="@drawable/background_rounded_corners_ripple"
-    android:backgroundTint="?colorSurface"
-    android:clickable="true"
-    android:elevation="@dimen/key_gear_item_elevation"
-    android:focusable="true"
-    android:transitionName="addItemRoot">
+    android:layout_height="@dimen/create_key_gear_add_photo_height">
 
-    <ImageView
-        android:id="@+id/addPhotoIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@null"
-        app:layout_constraintBottom_toTopOf="@id/addPhotoLabel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@drawable/ic_add_photo" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/addPhoto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="2dp"
+        android:background="@drawable/background_rounded_corners_ripple"
+        android:backgroundTint="?colorSurface"
+        android:clickable="true"
+        android:elevation="@dimen/key_gear_item_elevation"
+        android:focusable="true"
+        android:transitionName="addItemRoot">
 
-    <TextView
-        android:id="@+id/addPhotoLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_margin"
-        android:text="@string/KEY_GEAR_ADD_ITEM_ADD_PHOTO_BUTTON"
-        android:textAppearance="?textAppearanceBody2"
-        android:textColor="?colorSecondary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/addPhotoIcon" />
+        <ImageView
+            android:id="@+id/addPhotoIcon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@null"
+            app:layout_constraintBottom_toTopOf="@id/addPhotoLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:srcCompat="@drawable/ic_add_photo" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/addPhotoLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/base_margin"
+            android:text="@string/KEY_GEAR_ADD_ITEM_ADD_PHOTO_BUTTON"
+            android:textAppearance="?textAppearanceBody2"
+            android:textColor="?colorSecondary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/addPhotoIcon" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</FrameLayout>
