--- a/app/src/main/res/layout/activity_connect_payment.xml
+++ b/app/src/main/res/layout/activity_connect_payment.xml
@@ -35,7 +35,7 @@
             android:layout_marginTop="@dimen/trustly_explainer_illustration_offset"
             android:text="@string/ONBOARDING_CONNECT_DD_PRE_HEADLINE"
             android:textAppearance="?textAppearanceHeadline5"
-            android:textColor="?colorSecondary"
+            android:textColor="?textColorLink"
             app:layout_constraintBottom_toTopOf="@id/explainerTitle"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
