--- a/app/src/main/res/layout/key_gear_add_item.xml
+++ b/app/src/main/res/layout/key_gear_add_item.xml
@@ -32,7 +32,7 @@
         android:layout_marginTop="@dimen/base_margin"
         android:text="@string/KEY_GEAR_ADD_BUTTON"
         android:textAppearance="?textAppearanceBody2"
-        android:textColor="?colorSecondary"
+        android:textColor="?textColorLink"
         android:transitionName="addItemLabel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
