--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -67,7 +67,9 @@
     <attr name="textColorLink" format="reference" />
 
     <style name="AlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
+        <item name="buttonBarButtonStyle">?materialButtonTextStyle</item>
         <item name="android:textAllCaps">false</item>
+        <item name="android:letterSpacing">0</item>
     </style>
 
     <style name="Hedvig.Theme.Widgets.Chat.Hedvig" parent="Hedvig.Theme">
