Change the menu to show an icon instead of text

--- a/app/src/main/res/layout/activity_charity.xml
+++ b/app/src/main/res/layout/activity_charity.xml
@@ -108,7 +108,7 @@
                     android:paddingEnd="@dimen/base_margin_half"
                     android:paddingBottom="@dimen/base_margin"
                     android:text="@string/CHARITY_INFO_BUTTON_LABEL"
-                    app:icon="@drawable/ic_info_purple"
+                    app:icon="@drawable/ic_info"
                     app:iconTint="?textColorLink" />
 
             </LinearLayout>
@@ -167,7 +167,7 @@
                     android:paddingEnd="@dimen/base_margin_half"
                     android:paddingBottom="@dimen/base_margin"
                     android:text="@string/CHARITY_INFO_BUTTON_LABEL"
-                    app:icon="@drawable/ic_info_purple"
+                    app:icon="@drawable/ic_info"
                     app:iconTint="?textColorLink" />
 
             </LinearLayout>
