--- a/app/src/main/res/menu/referral_more_info_menu.xml
+++ b/app/src/main/res/menu/referral_more_info_menu.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/referralMoreInfo"
+        android:icon="@drawable/ic_info"
         android:orderInCategory="1"
         android:title="@string/REFERRAL_PROGRESS_TOPBAR_BUTTON"
-        app:showAsAction="always|withText" />
+        app:iconTint="?colorPrimary"
+        app:showAsAction="always" />
 </menu>
