--- a/app/src/main/res/layout/dashboard_contract_row.xml
+++ b/app/src/main/res/layout/dashboard_contract_row.xml
@@ -92,7 +92,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_info_purple" />
+                app:srcCompat="@drawable/ic_info" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -158,7 +158,7 @@
                 android:layout_marginEnd="@dimen/base_margin_double"
                 android:contentDescription="@null"
                 android:tint="?colorPrimary"
-                app:srcCompat="@drawable/ic_info_purple" />
+                app:srcCompat="@drawable/ic_info" />
 
         </LinearLayout>
 
@@ -218,7 +218,7 @@
                 android:layout_marginEnd="@dimen/base_margin_double"
                 android:contentDescription="@null"
                 android:tint="?colorPrimary"
-                app:srcCompat="@drawable/ic_info_purple" />
+                app:srcCompat="@drawable/ic_info" />
 
         </LinearLayout>
 
