--- a/app/src/main/res/layout/key_gear_item_detail_valuation_section.xml
+++ b/app/src/main/res/layout/key_gear_item_detail_valuation_section.xml
@@ -40,7 +40,7 @@
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_info_purple"
+                app:srcCompat="@drawable/ic_info"
                 tools:visibility="visible" />
 
             <Button
