--- a/app/src/main/res/layout/activity_emergency.xml
+++ b/app/src/main/res/layout/activity_emergency.xml
@@ -2,15 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".feature.claims.ui.commonclaim.EmergencyActivity">
 
     <androidx.core.widget.NestedScrollView
-        android:id="@+id/root"
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
@@ -73,6 +75,7 @@
                         tools:visibility="visible" />
 
                 </LinearLayout>
+
             </com.hedvig.app.ui.view.HedvigCardView>
 
             <com.hedvig.app.ui.view.HedvigCardView
@@ -118,6 +121,7 @@
             </com.hedvig.app.ui.view.HedvigCardView>
 
         </LinearLayout>
+
     </androidx.core.widget.NestedScrollView>
 
     <androidx.appcompat.widget.Toolbar
