--- a/app/src/main/res/layout/peril_detail.xml
+++ b/app/src/main/res/layout/peril_detail.xml
@@ -20,7 +20,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:contentDescription="@null"
-            tools:src="@drawable/ic_fire_green" />
+            tools:src="@drawable/ic_active" />
 
         <TextView
             android:id="@+id/label"
