--- a/app/src/main/res/layout/dialog_key_gear_coverage.xml
+++ b/app/src/main/res/layout/dialog_key_gear_coverage.xml
@@ -25,7 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/base_margin_double"
-            tools:src="@drawable/ic_accidental_damage" />
+            android:contentDescription="@null"
+            tools:src="@drawable/ic_active" />
 
         <TextView
             android:id="@+id/title"
