--- a/app/src/main/res/layout/peril_bottom_sheet_new.xml
+++ b/app/src/main/res/layout/peril_bottom_sheet_new.xml
@@ -29,7 +29,7 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:contentDescription="@null"
-            tools:src="@drawable/ic_fire_green" />
+            tools:src="@drawable/ic_active" />
 
         <TextView
             android:id="@+id/title"
